[gd_scene load_steps=2 format=3 uid="uid://ndiekew7fjjd"]

[ext_resource type="Script" path="res://scripts/options.gd" id="1_cvhn8"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cvhn8")

[node name="Settings" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.5
offset_top = -102.0
offset_right = 156.5
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"

[node name="Print" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.5
offset_top = -11.0
offset_right = 156.5
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackToMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.5
offset_top = 70.0
offset_right = 156.5
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
text = "Back To Menu"

[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Print" to="." method="_on_print_pressed"]
[connection signal="pressed" from="BackToMenu" to="." method="_on_back_to_menu_pressed"]
